--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
 
   data:
     mongodb:
-      host: localhost
+      host: gogorpg.com
       port: 27017
       database: lifecapsule
 mybatis:
