--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
             <artifactId>spring-boot-starter-aop</artifactId>
             <version>2.1.4.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
